fix collapse

--- a/src/Components/Events/index.css
+++ b/src/Components/Events/index.css
@@ -50,7 +50,7 @@
 }
 @media screen and (max-width: 700px) {
   .event-grid-container {
-    grid-template-columns: 80px auto;
+    grid-template-columns: 80px 80%;
     grid-auto-rows: 80px;
   }
 }
