--- a/src/Components/QuickLinks/index.css
+++ b/src/Components/QuickLinks/index.css
@@ -3,7 +3,7 @@
   grid-gap: 5px 5px;
   grid-template-columns: 136px 136px 136px;
   grid-template-rows: 136px 136px 136px;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .quicklink-grid-item {
